--- a/src/app/components/admin/raports/raports.component.html
+++ b/src/app/components/admin/raports/raports.component.html
@@ -2,74 +2,73 @@
 
   <div class="row my-4" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutGap="20">
     <div fxFlex="100" fxLayoutAlign="center">
-        <mat-form-field class="search-panel" fxFlex="50" fxFlex.sm fxFlex.xs>
-          <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
-        </mat-form-field>
-      </div>
-  </div>
-  
-
-  
-    <div class="col-12">
-      <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
-   
-          <ng-container matColumnDef="number">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Numer</th>
-            <td mat-cell *matCellDef="let element">#{{element.number}}</td>
-          </ng-container>
-        
-          <ng-container matColumnDef="owner">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Użytkownik</th>
-            <td mat-cell *matCellDef="let element">{{element.fullname}}</td>
-          </ng-container>
-        
-          <ng-container matColumnDef="apartment">
-            <th mat-header-cell *matHeaderCellDef> Lokal</th>
-            <td mat-cell *matCellDef="let element"> {{element.apartment.street}} {{element.apartment.buildingnumber}}/{{element.apartment.apartmentnumber}}</td>
-          </ng-container>
-        
-          <ng-container matColumnDef="createdAt">
-            <th mat-header-cell *matHeaderCellDef> Data dokumentu</th>
-            <td mat-cell *matCellDef="let element">{{element.createdAt.toDate() | date: 'dd/MM/yyyy'}}</td>
-          </ng-container>
-        
-          <ng-container matColumnDef="scope">
-            <th mat-header-cell *matHeaderCellDef> Wystawiono za</th>
-            <td mat-cell *matCellDef="let element">{{element.startdate.toDate() | date: 'dd/MM/yyyy'}} -
-              {{element.enddate.toDate() | date: 'dd/MM/yyyy'}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="edit">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #menu="matMenu">
-                <button mat-menu-item [routerLink]="['/user/raports/', element.uid]">
-                  <mat-icon>visibility</mat-icon>
-                  <span>Podgląd</span>
-                </button>
-                <button mat-menu-item (click)="redirectToDelete(element)">
-                  <mat-icon>delete</mat-icon>
-                  <span>Usuń</span>
-                </button>
-              </mat-menu> 
-            </td>
-          </ng-container>
-        
-      
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      
-        </table>
-      
-        <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons aria-label="Select page of periodic elements">
-        </mat-paginator>
-      </div>
-  
+      <mat-form-field class="search-panel" fxFlex="50" fxFlex.sm fxFlex.xs>
+        <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
+      </mat-form-field>
     </div>
-  
-  
-  
+  </div>
+
+
+
+  <div class="col-12">
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
+
+        <ng-container matColumnDef="number">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Numer</th>
+          <td mat-cell *matCellDef="let element">#{{element.number}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="owner">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Użytkownik</th>
+          <td mat-cell *matCellDef="let element">{{element.fullname}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="apartment">
+          <th mat-header-cell *matHeaderCellDef> Lokal</th>
+          <td mat-cell *matCellDef="let element"> {{element.apartment.street}}
+            {{element.apartment.buildingnumber}}/{{element.apartment.apartmentnumber}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef> Data dokumentu</th>
+          <td mat-cell *matCellDef="let element">{{element.createdAt.toDate() | date: 'dd/MM/yyyy'}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="scope">
+          <th mat-header-cell *matHeaderCellDef> Wystawiono za</th>
+          <td mat-cell *matCellDef="let element">{{element.startdate.toDate() | date: 'dd/MM/yyyy'}} -
+            {{element.enddate.toDate() | date: 'dd/MM/yyyy'}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="edit">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item [routerLink]="['/user/raports/', element.uid]">
+                <mat-icon>visibility</mat-icon>
+                <span>Podgląd</span>
+              </button>
+              <button mat-menu-item (click)="redirectToDelete(element)">
+                <mat-icon>delete</mat-icon>
+                <span>Usuń</span>
+              </button>
+            </mat-menu>
+          </td>
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons
+        aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
+
+  </div>
