--- a/src/app/components/user/user-raports-view/user-raports-view.component.scss
+++ b/src/app/components/user/user-raports-view/user-raports-view.component.scss
@@ -43,7 +43,7 @@
 
 .mat-column-name {
     padding-left: 16px;
-    font-size:14px;
+    font-size: 14px;
 }
 
 .mat-column-amount {
@@ -58,7 +58,9 @@
     text-align: center;
 }
 
-#Document { padding: 30px;}
+#Document {
+    padding: 30px;
+}
 
 
 .mat-column-converter {
