--- a/src/app/components/admin/payments/payments-add/payments-add.component.html
+++ b/src/app/components/admin/payments/payments-add/payments-add.component.html
@@ -1,57 +1,60 @@
 <mat-stepper orientation="vertical" [linear]="true" #stepper>
-    <mat-step [stepControl]="firstFormGroup">
-      <form [formGroup]="firstFormGroup">
-        <ng-template matStepLabel>Konfiguracja Płatności</ng-template>
-        <div class="row my-3">
-          <div class="col-3">
-              <mat-form-field appearance="outline">
-                <mat-label>Użytkownik</mat-label>
-                <mat-select formControlName="user" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika" required>
-                  <mat-option *ngFor="let user of authService.users | async" [value]="user">{{user.name}} {{user.lastname}}</mat-option></mat-select>
-                  <mat-error *ngIf="firstFormGroup.controls['user'].hasError('required')">Lokal musi mieć przypisanego mieszkańca</mat-error>
-                </mat-form-field>
-            </div>
+  <mat-step [stepControl]="firstFormGroup">
+    <form [formGroup]="firstFormGroup">
+      <ng-template matStepLabel>Konfiguracja Płatności</ng-template>
+      <div class="row my-3">
+        <div class="col-3">
+          <mat-form-field appearance="outline">
+            <mat-label>Użytkownik</mat-label>
+            <mat-select formControlName="user" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika"
+              required>
+              <mat-option *ngFor="let user of authService.users | async" [value]="user">{{user.name}} {{user.lastname}}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="firstFormGroup.controls['user'].hasError('required')">Lokal musi mieć przypisanego
+              mieszkańca</mat-error>
+          </mat-form-field>
         </div>
-        <div class="row">
-          <div class="col">
-            <app-input2 [control]="amount" title="Kwota"></app-input2>
-          </div>
-          <div class="col">
-            <mat-form-field appearance="outline">
-              <mat-label>Status</mat-label>
-              <mat-select formControlName="status">
-                <mat-option *ngFor="let f of form" [value]="f.label">
-                  {{f.label}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <app-input2 [control]="amount" title="Kwota"></app-input2>
+        </div>
+        <div class="col">
+          <mat-form-field appearance="outline">
+            <mat-label>Status</mat-label>
+            <mat-select formControlName="status">
+              <mat-option *ngFor="let f of form" [value]="f.label">
+                {{f.label}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
 
+      </div>
+      <div class="row">
+        <div class="col">
+          <mat-form-field appearance="outline">
+            <mat-label>Data zaksięgowania</mat-label>
+            <input formControlName="date" matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
         </div>
-        <div class="row">
-          <div class="col">
-            <mat-form-field appearance="outline">
-              <mat-label>Data zaksięgowania</mat-label>
-              <input formControlName="date" matInput [matDatepicker]="picker">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-          </div>
-        </div>
-        <div>
-          <button mat-button matStepperNext>Przejdź dalej</button>
-        </div>
-      </form>
-    </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Finalizacja</ng-template>
-      <div class="row my-4">
-        <p>Czy dodać obecną płatność ?</p>
       </div>
       <div>
-        <button mat-button matStepperPrevious>Cofnij</button>
-        <button mat-button color="warn" (click)="createPayment();">Potwierdź Płatność</button>
+        <button mat-button matStepperNext>Przejdź dalej</button>
       </div>
-    </mat-step>
-  </mat-stepper>
-  
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Finalizacja</ng-template>
+    <div class="row my-4">
+      <p>Czy dodać obecną płatność ?</p>
+    </div>
+    <div>
+      <button mat-button matStepperPrevious>Cofnij</button>
+      <button mat-button color="warn" (click)="createPayment();">Potwierdź Płatność</button>
+    </div>
+  </mat-step>
+</mat-stepper>
