--- a/src/app/components/admin/premises/premises-add/premises-add.component.html
+++ b/src/app/components/admin/premises/premises-add/premises-add.component.html
@@ -1,88 +1,92 @@
 <mat-stepper orientation="vertical" [linear]="true" #stepper>
-    <mat-step [stepControl]="firstFormGroup">
-      <form [formGroup]="firstFormGroup">
-        <ng-template matStepLabel>Podstawowe Dane</ng-template>
-        <div class="row my-3">
-          <div class="col-3">
-              <mat-form-field appearance="outline">
-                <mat-label>Użytkownik</mat-label>
-                <mat-select formControlName="owner" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika">
-                  <mat-option *ngFor="let user of authService.users | async" [value]="user">{{user.name}} {{user.lastname}}</mat-option></mat-select>
-                  <mat-error *ngIf="firstFormGroup.controls['owner'].hasError('required')">Lokal musi mieć przypisanego mieszkańca</mat-error>
-                </mat-form-field>
-            </div>
+  <mat-step [stepControl]="firstFormGroup">
+    <form [formGroup]="firstFormGroup">
+      <ng-template matStepLabel>Podstawowe Dane</ng-template>
+      <div class="row my-3">
+        <div class="col-3">
+          <mat-form-field appearance="outline">
+            <mat-label>Użytkownik</mat-label>
+            <mat-select formControlName="owner" (selectionChange)="selectUser($event)"
+              placeholder="Wybierz użytkownika">
+              <mat-option *ngFor="let user of authService.users | async" [value]="user">{{user.name}} {{user.lastname}}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="firstFormGroup.controls['owner'].hasError('required')">Lokal musi mieć przypisanego
+              mieszkańca</mat-error>
+          </mat-form-field>
         </div>
-        <div class="row">
-          <div class="col">
-            <mat-form-field class="my-2" appearance="outline">
-              <mat-label>Ulica</mat-label>
-              <input matInput placeholder="Ulica" formControlName="street">
-              <mat-error *ngIf="firstFormGroup.controls['street'].hasError('required')">Ulica jest wymagana</mat-error>
-            </mat-form-field>
-          </div>
-          <div class="col">
-            <mat-form-field class="my-2" appearance="outline">
-              <mat-label>Numer Budynku</mat-label>
-              <input matInput placeholder="Numer Budynku" formControlName="buildingnumber">
-            </mat-form-field>
-          </div>
-          <div class="col">
-            <mat-form-field class="my-2" appearance="outline">
-              <mat-label>Numer Lokalu</mat-label>
-              <input matInput placeholder="Numer Mieszkania" formControlName="apartmentnumber">
-              <mat-error *ngIf="firstFormGroup.controls['apartmentnumber'].hasError('required')">Numer Lokalu jest wymagany</mat-error>
-
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <app-input title="Kod Pocztowy" [control]="postcode" [minLength]=6 [maxLength]=6 format="00-000"></app-input>
-          </div>
-          <div class="col">
-            <app-input2 [control]="area" title="Powierzchnia (m2)"></app-input2>
-          </div>
-          <div class="col">
-            <app-input2 [control]="rate" title="Stawka (za m2)"></app-input2>
-          </div>
-        </div>
-  
-  
-        <div>
-          <button mat-button matStepperNext>Przejdź dalej</button>
-        </div>
-      </form>
-    </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Weryfikacja Danych</ng-template>
-  
+      </div>
       <div class="row">
-        <mat-list>
-          <div class="col">
-            <mat-list-item>Ulica: {{firstFormGroup.value.street}} </mat-list-item>
-            <mat-list-item>Number Budynku: {{firstFormGroup.value.buildingnumber}} </mat-list-item>
-            <mat-list-item>Numer Lokalu: {{firstFormGroup.value.apartmentnumber}} </mat-list-item>
-            <mat-list-item>Kod Pocztowy: {{firstFormGroup.value.postcode}} </mat-list-item>
-          </div>
-        </mat-list>
-  
+        <div class="col">
+          <mat-form-field class="my-2" appearance="outline">
+            <mat-label>Ulica</mat-label>
+            <input matInput placeholder="Ulica" formControlName="street">
+            <mat-error *ngIf="firstFormGroup.controls['street'].hasError('required')">Ulica jest wymagana</mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col">
+          <mat-form-field class="my-2" appearance="outline">
+            <mat-label>Numer Budynku</mat-label>
+            <input matInput placeholder="Numer Budynku" formControlName="buildingnumber">
+          </mat-form-field>
+        </div>
+        <div class="col">
+          <mat-form-field class="my-2" appearance="outline">
+            <mat-label>Numer Lokalu</mat-label>
+            <input matInput placeholder="Numer Mieszkania" formControlName="apartmentnumber">
+            <mat-error *ngIf="firstFormGroup.controls['apartmentnumber'].hasError('required')">Numer Lokalu jest
+              wymagany</mat-error>
+
+          </mat-form-field>
+        </div>
       </div>
-  
+      <div class="row">
+        <div class="col">
+          <app-input title="Kod Pocztowy" [control]="postcode" [minLength]=6 [maxLength]=6 format="00-000"></app-input>
+        </div>
+        <div class="col">
+          <app-input2 [control]="area" title="Powierzchnia (m2)"></app-input2>
+        </div>
+        <div class="col">
+          <app-input2 [control]="rate" title="Stawka (za m2)"></app-input2>
+        </div>
+      </div>
+
+
       <div>
-        <button mat-button matStepperPrevious>Cofnij</button>
-        <button mat-button matStepperNext>Przejdź Dalej</button>
+        <button mat-button matStepperNext>Przejdź dalej</button>
       </div>
-    </mat-step>
-  
-    <mat-step>
-      <ng-template matStepLabel>Finalizacja</ng-template>
-      <div class="row my-4">
-        <p>Czy utworzyć nowy bydunek ?</p>
-      </div>
-      <div>
-        <button mat-button matStepperPrevious>Cofnij</button>
-        <button mat-button color="warn" (click)="createBuilding();stepper.reset();">Utwórz Budynek</button>
-      </div>
-    </mat-step>
-  </mat-stepper>
-  
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Weryfikacja Danych</ng-template>
+
+    <div class="row">
+      <mat-list>
+        <div class="col">
+          <mat-list-item>Ulica: {{firstFormGroup.value.street}} </mat-list-item>
+          <mat-list-item>Number Budynku: {{firstFormGroup.value.buildingnumber}} </mat-list-item>
+          <mat-list-item>Numer Lokalu: {{firstFormGroup.value.apartmentnumber}} </mat-list-item>
+          <mat-list-item>Kod Pocztowy: {{firstFormGroup.value.postcode}} </mat-list-item>
+        </div>
+      </mat-list>
+
+    </div>
+
+    <div>
+      <button mat-button matStepperPrevious>Cofnij</button>
+      <button mat-button matStepperNext>Przejdź Dalej</button>
+    </div>
+  </mat-step>
+
+  <mat-step>
+    <ng-template matStepLabel>Finalizacja</ng-template>
+    <div class="row my-4">
+      <p>Czy utworzyć nowy bydunek ?</p>
+    </div>
+    <div>
+      <button mat-button matStepperPrevious>Cofnij</button>
+      <button mat-button color="warn" (click)="createBuilding();stepper.reset();">Utwórz Budynek</button>
+    </div>
+  </mat-step>
+</mat-stepper>
