--- a/src/app/components/admin/premises/premises-edit/premises-edit.component.html
+++ b/src/app/components/admin/premises/premises-edit/premises-edit.component.html
@@ -1,69 +1,69 @@
 <!-- {{form.value | json}} -->
 <mat-stepper orientation="vertical" [linear]="true" #stepper>
-    <mat-step [stepControl]="firstFormGroup">
-      <form [formGroup]="firstFormGroup">
-        <ng-template matStepLabel>Lokal</ng-template>
-        <div class="row my-3">
-  
-          <div class="col-6">
-            <mat-form-field appearance="outline">
-              <mat-label>Ulica:</mat-label>
-              <input matInput type="text" formControlName="street" placeholder="Ulica" />
-              <mat-icon matSuffix>edit_road</mat-icon>
-              <mat-error *ngIf="firstFormGroup.controls['street'].hasError('required')">Ulica jest wymagana</mat-error>
-            </mat-form-field>
-          </div>
-  
-          <div class="col-6">
-            <mat-form-field appearance="outline">
-              <mat-label>Numer Budynku:</mat-label>
-              <input matInput type="text" formControlName="buildingnumber" placeholder="Numer Budynku" />
-              <mat-icon matSuffix>format_list_numbered</mat-icon>
-            </mat-form-field>
-          </div>
-  
+  <mat-step [stepControl]="firstFormGroup">
+    <form [formGroup]="firstFormGroup">
+      <ng-template matStepLabel>Lokal</ng-template>
+      <div class="row my-3">
+
+        <div class="col-6">
+          <mat-form-field appearance="outline">
+            <mat-label>Ulica:</mat-label>
+            <input matInput type="text" formControlName="street" placeholder="Ulica" />
+            <mat-icon matSuffix>edit_road</mat-icon>
+            <mat-error *ngIf="firstFormGroup.controls['street'].hasError('required')">Ulica jest wymagana</mat-error>
+          </mat-form-field>
         </div>
-        <div class="row my-3">
-  
-          <div class="col-6">
-            <mat-form-field appearance="outline">
-              <mat-label>Numer Lokalu:</mat-label>
-              <input matInput type="text" formControlName="apartmentnumber" placeholder="Numer Lokalu" />
-              <mat-icon matSuffix>format_list_numbered</mat-icon>
-              <mat-error *ngIf="firstFormGroup.controls['apartmentnumber'].hasError('required')">Numer Lokalu jest wymagany</mat-error>
-              
-            </mat-form-field>
-          </div>
-  
-          <div class="col-6">
-            <app-input title="Kod Pocztowy" [setValue]="data.postcode" [control]="postcode" format="00-000"></app-input>
-          </div>
-  
+
+        <div class="col-6">
+          <mat-form-field appearance="outline">
+            <mat-label>Numer Budynku:</mat-label>
+            <input matInput type="text" formControlName="buildingnumber" placeholder="Numer Budynku" />
+            <mat-icon matSuffix>format_list_numbered</mat-icon>
+          </mat-form-field>
         </div>
-  
-        <div class="row my-3">
-          <div class="col">
-            <app-input2 [control]="area" title="Powierzchnia (m2)" [value]="data.area"></app-input2>
-          </div>
-          <div class="col">
-            <app-input2 [control]="rate" title="Stawka (za m2)" [value]="data.rate"></app-input2>
-          </div>
-        </div>
-  
-        <div>
-          <button mat-raised-button matStepperNext>Przejdź Dalej</button>
-        </div>
-      </form>
-    </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Finalizacja</ng-template>
-      <div class="row my-4">
-        <p>Czy jesteś pewny, że chcesz zmodyfikować ten obiekt ?</p>
+
       </div>
-      <div fxLayout="row" fxLayoutGap="20">
-        <button mat-raised-button matStepperPrevious>Cofnij</button>
-        <button mat-raised-button color="primary" (click)="editApartment()">Edytuj Płatność</button>
+      <div class="row my-3">
+
+        <div class="col-6">
+          <mat-form-field appearance="outline">
+            <mat-label>Numer Lokalu:</mat-label>
+            <input matInput type="text" formControlName="apartmentnumber" placeholder="Numer Lokalu" />
+            <mat-icon matSuffix>format_list_numbered</mat-icon>
+            <mat-error *ngIf="firstFormGroup.controls['apartmentnumber'].hasError('required')">Numer Lokalu jest
+              wymagany</mat-error>
+
+          </mat-form-field>
+        </div>
+
+        <div class="col-6">
+          <app-input title="Kod Pocztowy" [setValue]="data.postcode" [control]="postcode" format="00-000"></app-input>
+        </div>
+
       </div>
-    </mat-step>
-  </mat-stepper>
-  
+
+      <div class="row my-3">
+        <div class="col">
+          <app-input2 [control]="area" title="Powierzchnia (m2)" [value]="data.area"></app-input2>
+        </div>
+        <div class="col">
+          <app-input2 [control]="rate" title="Stawka (za m2)" [value]="data.rate"></app-input2>
+        </div>
+      </div>
+
+      <div>
+        <button mat-raised-button matStepperNext>Przejdź Dalej</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Finalizacja</ng-template>
+    <div class="row my-4">
+      <p>Czy jesteś pewny, że chcesz zmodyfikować ten obiekt ?</p>
+    </div>
+    <div fxLayout="row" fxLayoutGap="20">
+      <button mat-raised-button matStepperPrevious>Cofnij</button>
+      <button mat-raised-button color="primary" (click)="editApartment()">Edytuj Płatność</button>
+    </div>
+  </mat-step>
+</mat-stepper>
