--- a/src/app/components/admin/raports/raports-add/raports-add.component.html
+++ b/src/app/components/admin/raports/raports-add/raports-add.component.html
@@ -1,125 +1,138 @@
-
-    <div class="row">
-      <div class="col-md-12 p-4 ">
-        <div class="col-12">
-        </div>
-        <form [formGroup]="form">
-          <div class="row g-6">
-            <div class="col-md-12 input-group mb-3">
-              <div class="col">
-                <mat-form-field appearance="outline" floatLabel="always">
-                  <mat-label>Numer Faktury</mat-label>
-                  <input formControlName="number" step="1" min="0" oninput="validity.valid||(value='');" matInput type="number">
-                  <mat-error *ngIf="this.form.controls['number'].hasError('required')">Numer faktury jest wymagany</mat-error>
-                </mat-form-field>
-              </div>
-              </div>
-
-              <div class="col-md-12 input-group mb-3">
-  
-              <div class="col">
-                <mat-form-field appearance="outline">
-                  <mat-label>Mieszkaniec</mat-label>
-                  <mat-select (selectionChange)="userSelected($event)" formControlName="user" placeholder="Wybierz użytkownika" required>
-                    <mat-option *ngFor="let user of users | async" [value]="user">{{user.name}} {{user.lastname}}</mat-option>
-                  </mat-select>
-                  <mat-error *ngIf="this.form.controls['user'].hasError('required')">Mieszkaniec jest wymagany</mat-error>
-                </mat-form-field>
-              </div>
-  
-              <div class="col">
-                <mat-form-field appearance="outline">
-                  <mat-label>Lokal/Mieszkanie</mat-label>
-                  <mat-select (selectionChange)="buildingSelected($event)" formControlName="apartment" placeholder="Wybierz mieszkanie" required>
-                    <mat-option *ngFor="let apartment of apartments | async" [value]="apartment">{{apartment.street}} {{apartment.buildingnumber}}/{{apartment.apartmentnumber}}</mat-option>
-                  </mat-select>
-                  <mat-error *ngIf="this.form.controls['apartment'].hasError('required')">Lokal jest wymagany</mat-error>
-                </mat-form-field>
-              </div>
-
-              
-              </div>
-
-              <div class="col-md-12 input-group mb-3">
-                
-              <div class="col">
-                <mat-form-field appearance="outline">
-                  <mat-label>Data</mat-label>
-                  <mat-date-range-input [rangePicker]="picker" required>
-                    <input formControlName="startdate" matStartDate placeholder="XX/XX/XXXX">
-                    <input formControlName="enddate" matEndDate placeholder="XX/XX/XXXX">
-                  </mat-date-range-input>
-                  
-                  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                  <mat-date-range-picker #picker></mat-date-range-picker>
-                </mat-form-field>
-              </div> 
-  
-
-              
-  
-  
-              <div class="col-12 mt-5 mb-3">
-                <button mat-raised-button type="button" color="primary" (click)="addOtherStatus()">Dodaj pole do rozliczeń</button>
-              </div>
-            </div>
-            <div class="col-12">
-              <div formArrayName="otherStatus" *ngFor="let x of otherStatus.controls; let i = index"
-                class="input-group mb-3">
-  
-                <div class="row col-12" [formGroupName]="i">
-                  <div class="col">
-                    <mat-form-field appearance="outline">
-                      <mat-label>Usługa</mat-label>
-                      <input formControlName="name" matInput placeholder="Przykład (Zimna woda i ścieki)" />
-                      <mat-error *ngIf="otherStatus.controls[i].get('name')?.hasError('required')">Nazwa usługi jest wymagana</mat-error>
-                    </mat-form-field>
-                  </div>
-
-                  <div class="col">
-                    <mat-form-field appearance="outline">
-                      <mat-label>Zużycie</mat-label>
-                      <input matInput currencyMask formControlName="amount" [options]="{ prefix: ' ', thousands: '', decimal: '.', align:'right', precision: 2}" />
-                      <mat-error *ngIf="otherStatus.controls[i].get('amount')?.hasError('required')">Wypełnij pole zużycia</mat-error>
-                    </mat-form-field>
-                   
-                  </div>
-
-                  <div class="col">
-                    <mat-form-field appearance="outline">
-                      <mat-label>Jednostka</mat-label>
-                      <mat-select formControlName="converter">
-                        <mat-option *ngFor="let conv of converter" [value]="conv.label">
-                          {{conv.label}}
-                        </mat-option>
-                      </mat-select>
-                      <mat-error *ngIf="otherStatus.controls[i].get('converter')?.hasError('required')">Jednostka jest wymagana do wystawiania rozliczenia</mat-error>
-                    </mat-form-field>
-                  </div>
-
-
-                  <div class="col">
-                    <mat-form-field appearance="outline" fxFlex>
-                      <mat-label>Koszt jednostkowy</mat-label>
-                      <input matInput currencyMask formControlName="price" [options]="{ prefix: 'zł ', thousands: '', decimal: '.', align:'right', precision: 2}" />
-                      <mat-error *ngIf="otherStatus.controls[i].get('price')?.hasError('required')">Wypełnij koszt jednostkowy</mat-error>
-                  </mat-form-field>
-                  </div>
-
-                  
-                  <div *ngIf="i >= 1" class="col">
-                    <button mat-raised-button color="primary" (click)="removeOtherStatus(i)">X</button>
-                  </div>
-                </div>
-
-              </div>
-  
-            </div>
+<div class="row">
+  <div class="col-md-12 p-4 ">
+    <div class="col-12">
+    </div>
+    <form [formGroup]="form">
+      <div class="row g-6">
+        <div class="col-md-12 input-group mb-3">
+          <div class="col">
+            <mat-form-field appearance="outline" floatLabel="always">
+              <mat-label>Numer Faktury</mat-label>
+              <input formControlName="number" step="1" min="0" oninput="validity.valid||(value='');" matInput
+                type="number">
+              <mat-error *ngIf="this.form.controls['number'].hasError('required')">Numer faktury jest wymagany
+              </mat-error>
+            </mat-form-field>
           </div>
-        </form>
+        </div>
 
-        <div class="d-flex flex-row float-right" style="gap: 1em">
-        <button mat-raised-button color="primary" (click)="SaveRaport()" [mat-dialog-close]="true" [disabled]="!form.valid">Generuj Raport</button>
+        <div class="col-md-12 input-group mb-3">
+
+          <div class="col">
+            <mat-form-field appearance="outline">
+              <mat-label>Mieszkaniec</mat-label>
+              <mat-select (selectionChange)="userSelected($event)" formControlName="user"
+                placeholder="Wybierz użytkownika" required>
+                <mat-option *ngFor="let user of users | async" [value]="user">{{user.name}} {{user.lastname}}
+                </mat-option>
+              </mat-select>
+              <mat-error *ngIf="this.form.controls['user'].hasError('required')">Mieszkaniec jest wymagany</mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col">
+            <mat-form-field appearance="outline">
+              <mat-label>Lokal/Mieszkanie</mat-label>
+              <mat-select (selectionChange)="buildingSelected($event)" formControlName="apartment"
+                placeholder="Wybierz mieszkanie" required>
+                <mat-option *ngFor="let apartment of apartments | async" [value]="apartment">{{apartment.street}}
+                  {{apartment.buildingnumber}}/{{apartment.apartmentnumber}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="this.form.controls['apartment'].hasError('required')">Lokal jest wymagany</mat-error>
+            </mat-form-field>
+          </div>
+
+
+        </div>
+
+        <div class="col-md-12 input-group mb-3">
+
+          <div class="col">
+            <mat-form-field appearance="outline">
+              <mat-label>Data</mat-label>
+              <mat-date-range-input [rangePicker]="picker" required>
+                <input formControlName="startdate" matStartDate placeholder="XX/XX/XXXX">
+                <input formControlName="enddate" matEndDate placeholder="XX/XX/XXXX">
+              </mat-date-range-input>
+
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-date-range-picker #picker></mat-date-range-picker>
+            </mat-form-field>
+          </div>
+
+
+
+
+
+          <div class="col-12 mt-5 mb-3">
+            <button mat-raised-button type="button" color="primary" (click)="addOtherStatus()">Dodaj pole do
+              rozliczeń</button>
+          </div>
+        </div>
+        <div class="col-12">
+          <div formArrayName="otherStatus" *ngFor="let x of otherStatus.controls; let i = index"
+            class="input-group mb-3">
+
+            <div class="row col-12" [formGroupName]="i">
+              <div class="col">
+                <mat-form-field appearance="outline">
+                  <mat-label>Usługa</mat-label>
+                  <input formControlName="name" matInput placeholder="Przykład (Zimna woda i ścieki)" />
+                  <mat-error *ngIf="otherStatus.controls[i].get('name')?.hasError('required')">Nazwa usługi jest
+                    wymagana</mat-error>
+                </mat-form-field>
+              </div>
+
+              <div class="col">
+                <mat-form-field appearance="outline">
+                  <mat-label>Zużycie</mat-label>
+                  <input matInput currencyMask formControlName="amount"
+                    [options]="{ prefix: ' ', thousands: '', decimal: '.', align:'right', precision: 2}" />
+                  <mat-error *ngIf="otherStatus.controls[i].get('amount')?.hasError('required')">Wypełnij pole zużycia
+                  </mat-error>
+                </mat-form-field>
+
+              </div>
+
+              <div class="col">
+                <mat-form-field appearance="outline">
+                  <mat-label>Jednostka</mat-label>
+                  <mat-select formControlName="converter">
+                    <mat-option *ngFor="let conv of converter" [value]="conv.label">
+                      {{conv.label}}
+                    </mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="otherStatus.controls[i].get('converter')?.hasError('required')">Jednostka jest
+                    wymagana do wystawiania rozliczenia</mat-error>
+                </mat-form-field>
+              </div>
+
+
+              <div class="col">
+                <mat-form-field appearance="outline" fxFlex>
+                  <mat-label>Koszt jednostkowy</mat-label>
+                  <input matInput currencyMask formControlName="price"
+                    [options]="{ prefix: 'zł ', thousands: '', decimal: '.', align:'right', precision: 2}" />
+                  <mat-error *ngIf="otherStatus.controls[i].get('price')?.hasError('required')">Wypełnij koszt
+                    jednostkowy</mat-error>
+                </mat-form-field>
+              </div>
+
+
+              <div *ngIf="i >= 1" class="col">
+                <button mat-raised-button color="primary" (click)="removeOtherStatus(i)">X</button>
+              </div>
+            </div>
+
+          </div>
+
         </div>
       </div>
+    </form>
+
+    <div class="d-flex flex-row float-right" style="gap: 1em">
+      <button mat-raised-button color="primary" (click)="SaveRaport()" [mat-dialog-close]="true"
+        [disabled]="!form.valid">Generuj Raport</button>
     </div>
+  </div>
+</div>
