--- a/src/app/components/admin/users/users-edit/users-edit.component.html
+++ b/src/app/components/admin/users/users-edit/users-edit.component.html
@@ -1,102 +1,106 @@
 <mat-card fxflex fxLayout="column" fxLayoutGap="20">
-    <mat-card-title fxLayout="row" fxFlex fxLayoutGap="20">
-      <div class="banner" fxFlex>Użytkownik:</div>
-      <div class="banner" fxFlex="60">{{data.name}} {{data.lastname}}</div>
-       </mat-card-title>
-  
-    <div class="example-container mt-3" fxFlex>
-      <form [formGroup]="form" (ngSubmit)="SaveUser()" autocomplete="on">
-        <mat-card-content>
-          <div class="row mt-4">
-  
-            <div class="col-6">
-              <mat-form-field appearance="outline">
-                <mat-label>Imię:</mat-label>
-                <input matInput type="text" formControlName="name" placeholder="Imię" />
-                <mat-icon matSuffix>badge</mat-icon>
-                <mat-hint>Imię</mat-hint>
-                <mat-error *ngIf="form.controls['name'].hasError('required')">Imię jest wymagane</mat-error>
-                <mat-error *ngIf="form.controls['name'].hasError('minlength')">Imię musi mieć minimum 3 znaki</mat-error>
-              </mat-form-field>
-            </div>
-  
-            <div class="col-6">
-              <mat-form-field appearance="outline">
-                <mat-label>Nazwisko:</mat-label>
-                <input matInput type="text" formControlName="lastname"
-                  placeholder="Nazwisko" />
-                <mat-icon matSuffix>badge</mat-icon>
-                <mat-hint>Nazwisko</mat-hint>
-  
-                <mat-error *ngIf="form.controls['lastname'].hasError('required')">Nazwisko jest wymagane</mat-error>
-                <mat-error *ngIf="form.controls['lastname'].hasError('minlength')">Nazwisko musi mieć minimum 3 znaki</mat-error>
-  
-              </mat-form-field>
-            </div>
-  
-  
-          </div>
-  
-          <div class="row">
-  
-            <div class="col-6">
-              <mat-form-field appearance="outline">
-                <mat-label>Adres:</mat-label>
-                <input matInput type="text"  formControlName="address" placeholder="Adres" />
-                <mat-icon matSuffix>approval</mat-icon>
-                <mat-hint>Adres</mat-hint>
-                <mat-error *ngIf="form.controls['address'].hasError('required')">Adres jest wymagany</mat-error>
-                <mat-error *ngIf="form.controls['address'].hasError('minlength')">Adres musi mieć minimum 5 znaków</mat-error>
-  
-              </mat-form-field>
-            </div>
-  
-            <div class="col-6">
-              <app-input title="Kod Pocztowy" [setValue]="pack.postcode" [control]="postcode" [minLength]=6 [maxLength]=6 format="00-000"></app-input>
-            </div>
-  
-  
-          </div>
-          <div class="row mt-3">
-  
-            <div class="col-6">
-              <mat-form-field appearance="outline">
-                <mat-label>Miasto:</mat-label>
-                <input matInput type="text" formControlName="city" placeholder="Miasto" />
-                <mat-icon matSuffix>cottage</mat-icon>
-                <mat-hint>Miasto</mat-hint>
+  <mat-card-title fxLayout="row" fxFlex fxLayoutGap="20">
+    <div class="banner" fxFlex>Użytkownik:</div>
+    <div class="banner" fxFlex="60">{{data.name}} {{data.lastname}}</div>
+  </mat-card-title>
 
-                <mat-error *ngIf="form.controls['city'].hasError('required')">Miasto jest wymagane</mat-error>
-                <mat-error *ngIf="form.controls['city'].hasError('minlength')">Miasto musi mieć minimum 3 znaki</mat-error>
-  
-              </mat-form-field>
-            </div>
-            
-            <div class="col-6">
-              <app-input title="Telefon Kontaktowy" [setValue]="pack.phone" [control]="phone" [minLength]=11 [maxLength]=11 format="000-000-000"></app-input>
-            </div>
+  <div class="example-container mt-3" fxFlex>
+    <form [formGroup]="form" (ngSubmit)="SaveUser()" autocomplete="on">
+      <mat-card-content>
+        <div class="row mt-4">
 
+          <div class="col-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Imię:</mat-label>
+              <input matInput type="text" formControlName="name" placeholder="Imię" />
+              <mat-icon matSuffix>badge</mat-icon>
+              <mat-hint>Imię</mat-hint>
+              <mat-error *ngIf="form.controls['name'].hasError('required')">Imię jest wymagane</mat-error>
+              <mat-error *ngIf="form.controls['name'].hasError('minlength')">Imię musi mieć minimum 3 znaki</mat-error>
+            </mat-form-field>
           </div>
-  
-            <app-input title="Rachunek Bankowy" class="fullwidth" [setValue]="pack.bankaccount" [control]="bankaccount" [minLength]=32 [maxLength]=32 format="00 0000 0000 0000 0000 0000 0000"></app-input>
 
-          <div class="row mt-3">
-            <div class="col-6">
-              <mat-slide-toggle formControlName="moderator">Uprawnienia Moderatora</mat-slide-toggle>
-            </div>
+          <div class="col-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Nazwisko:</mat-label>
+              <input matInput type="text" formControlName="lastname" placeholder="Nazwisko" />
+              <mat-icon matSuffix>badge</mat-icon>
+              <mat-hint>Nazwisko</mat-hint>
+
+              <mat-error *ngIf="form.controls['lastname'].hasError('required')">Nazwisko jest wymagane</mat-error>
+              <mat-error *ngIf="form.controls['lastname'].hasError('minlength')">Nazwisko musi mieć minimum 3 znaki
+              </mat-error>
+
+            </mat-form-field>
           </div>
-  
-          <div class="row">
-            <div class="col-12 text-center">
-              <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid">
-                Zaakceptuj zmiany
-              </button>
-            </div>
+
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Adres:</mat-label>
+              <input matInput type="text" formControlName="address" placeholder="Adres" />
+              <mat-icon matSuffix>approval</mat-icon>
+              <mat-hint>Adres</mat-hint>
+              <mat-error *ngIf="form.controls['address'].hasError('required')">Adres jest wymagany</mat-error>
+              <mat-error *ngIf="form.controls['address'].hasError('minlength')">Adres musi mieć minimum 5 znaków
+              </mat-error>
+
+            </mat-form-field>
           </div>
-  
-        </mat-card-content>
-  
-      </form>
-    </div>
-  </mat-card>
-  
+
+          <div class="col-6">
+            <app-input title="Kod Pocztowy" [setValue]="pack.postcode" [control]="postcode" [minLength]=6 [maxLength]=6
+              format="00-000"></app-input>
+          </div>
+
+
+        </div>
+        <div class="row mt-3">
+
+          <div class="col-6">
+            <mat-form-field appearance="outline">
+              <mat-label>Miasto:</mat-label>
+              <input matInput type="text" formControlName="city" placeholder="Miasto" />
+              <mat-icon matSuffix>cottage</mat-icon>
+              <mat-hint>Miasto</mat-hint>
+
+              <mat-error *ngIf="form.controls['city'].hasError('required')">Miasto jest wymagane</mat-error>
+              <mat-error *ngIf="form.controls['city'].hasError('minlength')">Miasto musi mieć minimum 3 znaki
+              </mat-error>
+
+            </mat-form-field>
+          </div>
+
+          <div class="col-6">
+            <app-input title="Telefon Kontaktowy" [setValue]="pack.phone" [control]="phone" [minLength]=11
+              [maxLength]=11 format="000-000-000"></app-input>
+          </div>
+
+        </div>
+
+        <app-input title="Rachunek Bankowy" class="fullwidth" [setValue]="pack.bankaccount" [control]="bankaccount"
+          [minLength]=32 [maxLength]=32 format="00 0000 0000 0000 0000 0000 0000"></app-input>
+
+        <div class="row mt-3">
+          <div class="col-6">
+            <mat-slide-toggle formControlName="moderator">Uprawnienia Moderatora</mat-slide-toggle>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12 text-center">
+            <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid">
+              Zaakceptuj zmiany
+            </button>
+          </div>
+        </div>
+
+      </mat-card-content>
+
+    </form>
+  </div>
+</mat-card>
