--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,14 +13,16 @@
         </mat-form-field>
         <mat-form-field class="my-3" appearance="outline">
           <mat-label>Hasło </mat-label>
-          <input matInput [type]="visible_password ? 'password' : 'text'" placeholder="Twoje hasło" formControlName="password" />
+          <input matInput [type]="visible_password ? 'password' : 'text'" placeholder="Twoje hasło"
+            formControlName="password" />
           <mat-icon (click)="visible_password=!visible_password" matSuffix>
             {{ visible_password ? 'visibility' : 'visibility_off' }}
           </mat-icon>
           <mat-error *ngIf="form.controls['password'].hasError('required')">Hasło jest wymagane</mat-error>
           <mat-error *ngIf="form.controls['password'].hasError('minlength')">Hasło jest zbyt krótkie</mat-error>
         </mat-form-field>
-        <button mat-raised-button color="primary" [class.spinner]="loading" type="submit" [disabled]="!form.valid||loading"> Zaloguj się </button>
+        <button mat-raised-button color="primary" [class.spinner]="loading" type="submit"
+          [disabled]="!form.valid||loading"> Zaloguj się </button>
       </mat-card-content>
     </form>
     <mat-card-footer>
